kubernetes/apps/base/k8gb/k8gb-common/config/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: keiretsu-top
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
    pod-security.kubernetes.io/enforce: privileged
  annotations:
