kubernetes/apps/base/k8gb/k8gb-common/config/gslb-dashboard-cdn.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard-cdn
  namespace: keiretsu-top
  annotations:
    item.homer.rajsingh.info/hide: "true"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: home
      sectionName: wildcard-cdn-keiretsu-top-https
  hostnames:
    - "home.cdn.${COMMON_DOMAIN}"
  rules:
    - backendRefs:
        - name: dashboard-cdn-homer
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
