kubernetes/apps/base/k8gb/k8gb-common/config/gslb-forgejo.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo-cdn
  namespace: keiretsu-top
  annotations:
    item.homer.rajsingh.info/name: "Forgejo"
    item.homer.rajsingh.info/subtitle: "Git Forge"
    item.homer.rajsingh.info/logo: "https://forgejo.org/favicon.svg"
    item.homer.rajsingh.info/keywords: "git, forge, code, repository"
    service.homer.rajsingh.info/name: "Infrastructure"
    service.homer.rajsingh.info/icon: "fas fa-code-branch"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: home
  hostnames:
    - "forgejo.cdn.${COMMON_DOMAIN}"
    - "forgejo.${COMMON_DOMAIN}"
  rules:
    - backendRefs:
        - name: forgejo-http
          namespace: forgejo
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
