kubernetes/apps/base/k8gb/k8gb-common/config/gslb-hubble.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-cdn
  namespace: keiretsu-top
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: home
  hostnames:
    - "hubble.cdn.${COMMON_DOMAIN}"
    - "hubble.${COMMON_DOMAIN}"
  rules:
    - backendRefs:
        - group: multicluster.x-k8s.io
          kind: ServiceImport
          name: hubble-ui
          namespace: hubble-ui
          port: 80
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: hubble-tinyauth
  namespace: keiretsu-top
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: hubble-cdn
  extAuth:
    headersToExtAuth:
      - cookie
      - x-forwarded-proto
      - x-forwarded-for
      - user-agent
    http:
      backendRefs:
        - name: tinyauth
          namespace: tinyauth
          port: 3000
      path: "/api/auth/envoy?path="
      headersToBackend:
        - remote-user
        - remote-email
        - remote-name
        - remote-groups
  authorization:
    defaultAction: Deny
    rules:
      - name: allow-raj-kartik
        action: Allow
        principal:
          headers:
            - name: Remote-Email
              values:
                - rajsinghcpre@gmail.com
                - kartikbharath@gmail.com
