kubernetes/apps/base/k8gb/k8gb-common/config/gslb-victoria-logs.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs-cdn
  namespace: keiretsu-top
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: home
  hostnames:
    - "logs.cdn.${COMMON_DOMAIN}"
    - "logs.${COMMON_DOMAIN}"
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /select/vmui/
            statusCode: 302
    - backendRefs:
        - group: ""
          kind: Service
          name: victoria-logs-victoria-logs-single-server
          namespace: monitoring
          port: 9428
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: victoria-logs-tinyauth
  namespace: keiretsu-top
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: victoria-logs-cdn
  extAuth:
    headersToExtAuth:
      - cookie
      - x-forwarded-proto
      - x-forwarded-for
      - user-agent
    http:
      backendRefs:
        - name: tinyauth
          namespace: tinyauth
          port: 3000
      path: "/api/auth/envoy?path="
      headersToBackend:
        - remote-user
        - remote-email
        - remote-name
        - remote-groups
  authorization:
    defaultAction: Deny
    rules:
      - name: allow-raj-kartik
        action: Allow
        principal:
          headers:
            - name: Remote-Email
              values:
                - rajsinghcpre@gmail.com
                - kartikbharath@gmail.com
