kubernetes/apps/base/k8gb/k8gb-common/config/gslb.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-web-cdn
  namespace: garage
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: home
      sectionName: wildcard-cdn-keiretsu-top-https
  hostnames:
    - "keiretsu.cdn.${COMMON_DOMAIN}"
  rules:
    - filters:
        - type: URLRewrite
          urlRewrite:
            hostname: "keiretsu.${COMMON_DOMAIN}"
      backendRefs:
        - group: multicluster.x-k8s.io
          kind: ServiceImport
          name: garage-gateway
          port: 3902
      matches:
        - path:
            type: PathPrefix
            value: /
